--- a/myblog.cabal
+++ b/myblog.cabal
@@ -5,9 +5,9 @@ version:             0.1.0.0
 homepage:            https://github.com/githubuser/myblog#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2022 Author name here
+author:              Ng Zhan Kang
+maintainer:          ngzhankang@outlook.com
+copyright:           2022 Ng Zhan Kang
 category:            Web
 build-type:          Simple
 extra-source-files:  README.md
