--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,5 +40,5 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: main # The branch the action should deploy to.
-          folder: _site # The folder the action should deploy.
+          folder: docs # The folder the action should deploy.
           clean: true # Automatically remove deleted files from the deploy branch
