Updates to urls cleaning.

--- a/myblog.cabal
+++ b/myblog.cabal
@@ -20,4 +20,5 @@ executable myblog
   build-depends:       base >= 4.7 && < 5,
                        hakyll >= 4.15.1.1 && < 5,
                        hjsmin == 0.2.*,
-                       bytestring >= 0.10.12
+                       bytestring >= 0.10.12,
+                       filepath
